[package]
name = "rust_lib_flutter_rust_bridge_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
flutter_rust_bridge_codegen = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.8.10"
windows = { version = "0.58.0", features = ["Win32_System_EventLog", "Win32_System_Diagnostics_Etw"] }
