[package]
name = "rust_lib_flutter_rust_bridge_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
flutter_rust_bridge_codegen = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
screenshots = "0.8.10"
winapi = { version = "0.3", features = [] }
