[package]
name = "rust_lib_flutter_rust_bridge_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.5.0"
flutter_rust_bridge_codegen = "2.4.0"
screenshots = "0.8.10"
rusqlite = "0.29.0"
sysinfo = "0.27.0"
# image = "0.23.14"
# leptess = "0"
# regex = "1"
rdev = "0"
notify = "6"
anyhow = "1.0"
runas = "1"

# [build-dependencies]
# bindgen = "0.70.1"
